# database

./: .clang-format  .gitignore  BUILDING.md  BUILD_AND_TEST_README.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SQLITE_EXAMPLE.md  build-and-test.bat  build-and-test.ps1
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
examples/: CMakeLists.txt  sqlite_demo.cpp
include/psr_database/: collection.hpp  database.hpp  psr_database.hpp
source/: collection.cpp  database.cpp  psr_database.cpp
test/: CMakeLists.txt
test/source/: psr_database_test.cpp
